<resources>
    <string name="app_name">HMS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="log_in">LOGIN</string>
    <string name="have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="birth_of_date">Birth Date</string>
    <string name="doctor">Doctor</string>
    <string name="others">Others..</string>
    <string name="type_your_massage_here">type your massage here…</string>
    <string name="mobile_username_email">Mobile , username , email</string>
    <string name="by_tapping_sign_up_accept_you_acknowledge_that_you_have_read_the_privacy_policy_and_agree_to_the_terms_of_service">By tapping “ Sign Up &amp; Accept ’ ,You \nacknowledge that you have read <font color='#303F9F'><b>the Privacy\nPolicy</b></font> and agree to <font color='#303F9F'><b>the Terms of Service</b></font>.</string>
    <string name="next">Next</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="gender">Gender</string>
    <string name="general">General</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="help">Help</string>
    <string name="invite_a_friend">Invite a friend</string>
    <string name="logout">Logout</string>
    <string name="read_external_storage_message_permissions">you need to accept Read external storage permissions to use this Option.</string>
    <string name="create_account">Create Account</string>
    <string name="includes_1_number">Includes 1 number and 1 special character</string>
    <string name="your_password_needs_to_be_at_least">Your password needs to be at least</string>
    <string name="_6_characters_long_no_white_spaces">6 characters long, no white spaces</string>
    <string name="includes_1_uppercase_and_1_lowercase">Includes 1 uppercase and 1 lowercase</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_btn">SiGN UP</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal_info">Personal Info</string>
    <string name="health_monitoring_system"><b><u><font color='#303F9F'>H</font></u></b>ealth <b><u><font color='#303F9F'>M</font></u></b>onitoring <b><u><font color='#303F9F'>S</font></u></b>ystem</string>

    <string name="work_imprevement_service"><b><u><font color='#303F9F'>W</font></u></b>ork <font color='#303F9F'><b><u>I</u></b></font>mprovement <font color='#303F9F'><b><u>S</u></b></font>ervice</string>
    <string name="update">Update</string>
    <string name="message">Message</string>
    <string name="upload_post">Upload Post</string>
    <string name="search_to_find_your_doctor">Search to find your doctor</string>
    <string name="search_to_find_your_patient">Search to find your patient</string>
    <string name="hello_user_name">Hello %1$s</string>
    <string name="please_enter_all_records">Please enter all records</string>
    <string name="SPO2">Spo2</string>
    <string name="swnd_email_address">After click on Verify button, we will send verification link to your email.</string>
    <string name="Temp">Temperature</string>
    <string name="Bpm">heart rate</string>
    <string name="imageInfo1">https://images.onhealth.com/images/slideshow/what-are-normal-safe-low-dangerous-blood-oxygen-levels-symptoms-chart/what-are-normal-safe-low-dangerous-blood-oxygen-levels-symptoms-chart-s1-why-your-blood-oxygen-saturation-matters.jpg</string>
    <string name="imageInfo2">https://health.clevelandclinic.org/wp-content/uploads/sites/3/2020/03/bodyTempNormal-marty-033020-770x533-1.jpg</string>
    <string name="imageInfo3">https://images.onhealth.com/images/slideshow/whats-a-healthy-and-normal-heart-rate-for-my-age/whats-a-healthy-and-normal-heart-rate-for-my-age-s3-healthy-resting-heart-rate-for-an-adult.jpg</string>
    <string name="imageInfo4">https://images.onhealth.com/images/slideshow/whats-a-healthy-and-normal-heart-rate-for-my-age/whats-a-healthy-and-normal-heart-rate-for-my-age-s4-healthy-resting-heart-rate-for-a-child.jpg</string>
    <string name="imageInfo5">https://images.medicinenet.com/images/slideshow/xl-sq-promos/what-are-normal-safe-low-dangerous-blood-oxygen-levels-symptoms-chart.jpg</string>
    <string name="imageInfo6">https://article.images.consumerreports.org/f_auto/prod/content/dam/CRO%20Images%202019/Health/10October/CR-Health-Inlinehero-healthiest-medical-tests-1019</string>
    <array name="itemsJob">
        <item>@string/doctor</item>
        <item>@string/others</item>
    </array>

    <string name="normal_spo2">95:100</string>
    <string name="spo1_advice">: To maintain Spo2 level in your body is through breathing ,the lungs takes oxygen that has been inhaled and binds it to hemoglobin that then travels throughout the body.</string>

    <string name="normal_temp">36.1: 37.2 °c</string>
    <string name="temp_advice">If your temperature is too high or too low you should seek medical assistance.</string>

    <string name="normal_bpm">50 BPM/S</string>
    <string name="bpm_advice">To maintain your heart rate as normal\no If you smoke, stop.\no Limit your intake of alcohol.\no Limit or stop using caffeine. Some people are sensitive to caffeine and may notice more symptoms when using caffeinated products, such as tea, coffee, colas and some over-the- counter medications.\no Limit or stop using caffeine. Some people are sensitive to caffeine and may notice more symptoms when using caffeinated products,such as tea, coffee, colas and some over-the- counter medications.</string>
<string name="covid19_advice">You should see doctor as fast as possible.
</string>
    <string name="agre_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="must_agre_the_terms_and_conditions">Must Accept the  terms and conditions</string>

    <string name="note">Note</string>
    <string name="confirm_borwser_doctor">Browse website</string>
    <string name="are_you_sure_to_change_password">change password!</string>
    <string name="your_password">Current password</string>
    <string name="change_password">Change Password</string>
    <string name="your_email">Your mail</string>
    <string name="new_password">New password</string>
    <string name="Agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="HMS">HMS</string>

</resources>