<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginEnd="17dp"
            android:background="@android:color/transparent"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

<!--                <TextView-->
<!--                    android:id="@+id/tv_tab_bar_sign_up"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:drawablePadding="@dimen/_5sdp"-->
<!--                    android:fontFamily="@font/poppins_regular"-->
<!--                    android:text="@string/skip"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textColor="@color/colorPrimary"-->
<!--                    android:textSize="@dimen/_12ssp"-->
<!--                    app:drawableEndCompat="@drawable/ic_arrow_back"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

                <ImageView
                    android:id="@+id/ic_back_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:src="@drawable/ic_arrow_round_back"
                    app:layout_constraintStart_toStartOf="parent"
/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPassSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:hint="@string/password"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_pass_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:includeFontPadding="false"
                    android:textColor="@color/colorPrimary"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_valid_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/your_password_needs_to_be_at_least"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintLeft_toLeftOf="@id/layoutPassSignUp"
                app:layout_constraintRight_toRightOf="@id/layoutPassSignUp"
                app:layout_constraintTop_toBottomOf="@id/layoutPassSignUp"
                app:layout_constraintVertical_bias="0" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_valid1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:checked="false"
                app:buttonTint="@null"
                android:button="@drawable/checkbox_background"
                android:buttonTint="@null"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/_6_characters_long_no_white_spaces"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_8ssp"
                app:chainUseRtl="false"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/tv_valid_pass"
                app:layout_constraintTop_toBottomOf="@id/tv_valid_pass" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_valid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:checked="false"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/includes_1_uppercase_and_1_lowercase"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_8ssp"
                android:button="@drawable/checkbox_background"
                android:clickable="false"
                app:chainUseRtl="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/checkbox_valid1"
                app:layout_constraintTop_toBottomOf="@id/checkbox_valid1" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkbox_valid3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10ssp"
                android:checked="false"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/includes_1_number"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_8ssp"
                android:button="@drawable/checkbox_background"
                app:chainUseRtl="false"
                android:clickable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/checkbox_valid2"
                app:layout_constraintTop_toBottomOf="@id/checkbox_valid2" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutConfirmPassSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/confirm_password"
                style="@style/TextInputLayoutStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkbox_valid3"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_confirm_pass_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/colorPrimary"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:padding="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10ssp"
                android:backgroundTint="@color/colorPrimary"
                android:elevation="@dimen/_3sdp"
                android:fontFamily="@font/poppins_semibold"
                android:paddingVertical="@dimen/_7sdp"
                android:text="@string/sign_up_btn"
                android:textSize="@dimen/_16ssp"
                app:cornerRadius="@dimen/_40sdp"
                app:elevation="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutConfirmPassSignUp"
                app:layout_constraintVertical_bias="0.8" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>